objects/Page_Block_Detail_Config__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Block_Config__c</fullName>
        <label>Page Block Config</label>
        <referenceTo>Page_Block_Config__c</referenceTo>
        <relationshipLabel>Page Block Details Config</relationshipLabel>
        <relationshipName>Page_Block_Details_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Page Block Detail Config</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Block Details Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>